# pusher

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-2848cb50110150d23ccd50ad035ab2b4a0624527e9fab138031a69ca0eec62e4.json  query-9a6feeae41e089d61cbd7f62843a9880b26e1ad3394b6f68128f746b5f77054e.json  query-f580b48bbb19eaa10514cb8b4e7dc5bfb9bf3949e36879f79937263aadcfcab9.json
arm64-cross/: Dockerfile
assets/: index.html  manifest.json  script.js  style.css
deb/: build.sh  changelog  conffiles  control  copyright  postinst  push-keygen.7  push-send.7  push-send.conf  push-send@.service  push-sender.service  push-server.7  push-server.conf  push-server.service  push-test.socket  push-test@.service
gen-keys/: main.rs
migrations/: 001_subscriptions.sql  002_subscriptions_name.sql  202312040702_subscriptions.sql  migrate.sh
send/: main.rs  msg.rs  req.rs  server.rs
server/: main.rs  server.rs  trigger_push.rs  vapid.rs
src/: base64.rs  db.rs  encr.rs  err.rs  es256.rs  jwt.rs  lib.rs  subscription.rs  utils.rs
