[package]
name = "pusher"
version = "0.3.0"
edition = "2021"
default-run = "push-server"

[lib]
name = "pusher"
path = "src/lib.rs"

[[bin]]
name = "push-server"
path = "server/main.rs"

[[bin]]
name = "push-keygen"
path = "gen-keys/main.rs"

[[bin]]
name = "push-send"
path = "send/main.rs"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
openssl = "0.10"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "macros", "migrate", "sqlite", "time"] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

# apparently faster compilation for sqlx-macros
[profile.dev.package.sqlx-macros]
opt-level = 3
