[package]
name = "pusher"
version = "0.4.9"
edition = "2021"
default-run = "push-server"

[lib]
name = "pusher"
path = "src/lib.rs"

[[bin]]
name = "push-server"
path = "server/main.rs"

[[bin]]
name = "push-keygen"
path = "gen-keys/main.rs"

[[bin]]
name = "push-send"
path = "send/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
openssl = "0.10"
reqwest = "0.12"
deadpool-sqlite = { version = "0.10", features = ["rt_tokio_1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
